--- a/megaweb/app/index.jade
+++ b/megaweb/app/index.jade
@@ -10,4 +10,4 @@ html(lang="ru")
         script(type="text/javascript").
             require("scripts/app")
 body
-    div.container-fluid(id="main_frame")
+    div.container-fluid.fillh(id="main_frame")
