--- a/megaweb/app/styles.sass
+++ b/megaweb/app/styles.sass
@@ -1,12 +1,7 @@
-html
-	overflow: hidden
 body
-	padding-top: 70px
-input
-	height: 34px
-.center
-	text-align: center
-	vertical-align: middle
+	padding-top: 50px
+	background-color: #BFE2CA
+	overflow-x: hidden
 .sidebar
 	position: fixed
 	top: 50px
@@ -33,5 +28,7 @@ input
 	overflow: hidden
 .ontop
 	z-index: 1030
-.black
-	background-color: black
+.fillh
+	height: 100%
+.c_main
+	background-color: #BFE2CA
