should work slowly

--- a/megaweb/app/index.jade
+++ b/megaweb/app/index.jade
@@ -3,7 +3,7 @@ html(lang="ru")
     head
         meta(charset="utf-8")
         meta(http-equiv="Content-Type", content="text/html; charset=utf8")
-        title Welcome Megaweb
+        title Vkmuse
         link(href="css/app.css", rel="stylesheet")
         script(type="text/javascript", src="//vk.com/js/api/xd_connection.js?2")
         script(type="text/javascript", src="js/app.js?")
