--- a/megaweb/app/styles.sass
+++ b/megaweb/app/styles.sass
@@ -33,3 +33,16 @@ body
 	min-height: 100%
 .c_main
 	background-color: #BFE2CA
+.overlay
+	z-index: 99999
+	position: fixed
+	top: 0
+	right: 0
+	bottom: 0
+	left: 0
+	list-style: none
+	margin: 0
+	background: rgba(0,0,0,0.8)
+.pbar
+	position: fixed
+	top: 1%
